# obsparams

./: .gitignore  README.md  github_files_check.code-workspace  obsfile_params_check.ipynb  obsfile_params_check.py  pyproject.toml
.github/workflows/: test.yml
scripts/: obsfile_params_check.py
test/: conftest.py  test_obsparams.py
